# howyoudoin

./: Cargo.toml  Makefile  rustfmt.toml
src/: lib.rs  main.rs
