[package]
name = "howyoudoin"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"

[dev-dependencies]
tempfile = "3.19.1"

[lints.clippy]
unwrap_used = "warn"

[profile.release]
opt-level = 'z'  # Optimize for size ('s' is less aggressive)
lto = true       # Link-Time Optimization
codegen-units = 1 # Slower build but better optimization
panic = 'abort'  # Don't include panic unwinding info
strip = true     # Remove debug symbols
